# circuithelper

./: .flake8  .gitignore  CONTRIBUTING.md  INSTALLATION.md  INSTALL_GUIDE.md  MANIFEST.in  PROJECT_OVERVIEW.md  PROVIDER_INTEGRATION.md  QUICKSTART.md  README.md  TESTING.md  TEST_SUMMARY.md  TEST_VALIDATION_REPORT.md  check_test_quality.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  validate_tests.py
.github/workflows/: README.md  lint.yml  tests.yml
circuithelper/: __init__.py  forms.py  models.py  navigation.py  urls.py  utils.py  views.py
circuithelper/api/: serializers.py  urls.py  views.py
circuithelper/management/commands/: sync_provider.py
circuithelper/providers/: __init__.py  base.py  lumen.py  registry.py
circuithelper/templates/circuithelper/: circuit_detail_tab.html
circuithelper/tests/: README.md  __init__.py  conftest.py  test_api.py  test_forms.py  test_management_commands.py  test_models.py  test_providers.py  test_utils.py
circuithelper/tests/fixtures/: factories.py
netbox_circuit_manager/: __init__.py  forms.py  models.py  navigation.py  urls.py  views.py
netbox_circuit_manager/api/: __init__.py  serializers.py  urls.py
netbox_circuit_manager/management/: __init__.py
netbox_circuit_manager/management/commands/: sync_provider.py
netbox_circuit_manager/migrations/: __init__.py
netbox_circuit_manager/providers/: base.py
netbox_circuit_manager/templates/netbox_circuit_manager/: circuit_detail_tab.html
netbox_circuit_manager/tests/: README.md  test_api.py  test_forms.py  test_management_commands.py  test_models.py  test_providers.py  test_utils.py
netbox_circuit_manager/tests/fixtures/: factories.py
